# routes/admin.php
@@ -139,6 +139,7 @@ Route::get('recommendations/least-privilege', [RecommendationsController::class,
 Route::get('applications', [ApplicationsController::class, 'index'])->middleware('iam.can:iam:applications.read');
 Route::get('applications/{app}', [ApplicationsController::class, 'show'])->middleware('iam.can:iam:applications.read');
 Route::get('applications/{app}/manifest', [ApplicationsController::class, 'manifest'])->middleware('iam.can:iam:applications.read');
+Route::get('applications/{app}/catalog', [ApplicationsController::class, 'catalog'])->middleware('iam.can:iam:applications.read');
 Route::get('applications/{app}/client', [ApplicationsController::class, 'client'])->middleware('iam.can:iam:applications.read');
 Route::post('applications/{app}/rotate-secret', [ApplicationsController::class, 'rotateSecret'])->middleware('iam.can:iam:clients.manage');
 Route::post('applications/{app}/revoke-client', [ApplicationsController::class, 'revokeClient'])->middleware('iam.can:iam:clients.manage');
